--- a/zenobot/package.json
+++ b/zenobot/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
