--- a/zenobot/package.json
+++ b/zenobot/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "framer-motion": "^11.15.0",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
