--- a/zenobot/package.json
+++ b/zenobot/package.json
@@ -8,28 +8,34 @@
     "start": "next start -p 8080",
     "lint": "next lint"
   },
+  "main": "dist/index",
+  "types": "dist/index",
+  "typings": "src/index",
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-popover": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.2",
     "@shadcn/ui": "^0.0.4",
+    "amadeus": "^11.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.4.7",
+    "google-search-results-nodejs": "^2.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
     "ollama": "^0.5.11",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
