--- a/zenobot/package.json
+++ b/zenobot/package.json
@@ -28,9 +28,10 @@
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
+    "next-themes": "^0.4.6",
     "ollama": "^0.5.11",
     "react": "^19.0.0",
-    "react-day-picker": "^9.5.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
