--- a/zenobot/package.json
+++ b/zenobot/package.json
@@ -26,12 +26,13 @@
     "google-search-results-nodejs": "^2.1.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.9.2",
     "next": "15.1.3",
     "next-themes": "^0.4.6",
     "ollama": "^0.5.11",
     "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "^9.6.5",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "tailwind-merge": "^2.6.0",
